# Fuckdl

./: .gitattributes  .gitignore  How.to.use.txt  RELEASE_NOTES_v1.1.1.md  download.ADN.bat  download.Amazon.bat  download.AppleTVPlus.bat  download.Arte.bat  download.BBCiPlayer.bat  download.Canal+.bat  download.ClaroVideo.bat  download.Crave.bat  download.Crunchyroll.bat  download.DSCPUS.bat  download.DisneyPlus.bat  download.Fandango.bat  download.Fawesome.bat  download.FujiTV.bat  download.HBOMax.bat  download.Hidive.bat  download.Hulu.bat  download.HuluJP.bat  download.Kocowa.bat  download.M6.bat  download.MGM+.bat  download.MeliPlay.bat  download.Molotov.bat  download.MoviesAnywhere.bat  download.Mubi.bat  download.NFB.bat  download.ParamountPlus.bat  download.ParamountPlus4K.bat  download.Peacock.bat  download.Plex.bat  download.PlutoTV.bat  download.RakutenTV.bat  download.Skyshowtime.bat  download.TFO.bat  download.TV5Unis.bat  download.Tenk.bat  (+12 more)
binaries/: MKVToolNix.url  bbc8aa.mpd  mp4dash.bat  mp4dashclone.bat  mp4hls.bat
example_configs/: fuckdl.yml
fuckdl/: constants.py  fuckdl.py  fuckdl.yml
fuckdl/commands/: __init__.py  dl.py
fuckdl/config/: __init__.py  fuckdl.yml
fuckdl/config/services/: adn.yml  amazon.yml  appletvplus.yml  arte.yml  bbciplayer.yml  canalplus.yml  clarovideo.yml  crave.yml  crunchyroll.yml  ctv.yml  disneyplus.yml  fod.yml  hbomax.yml  hidive.yml  hulu.yml  hulujp.yml  iqiyi.yml  kocowa.yml  meliplay.yml  mgmplus.yml  molotov.yml  mubi.yml  nfb.yml  paramountplus.yml  peacock.yml  pluto.yml  tfo.yml  (+8 more)
fuckdl/devices/: lg_electronics_inc_lg_webos_tv_msd96alvx_sl3000.prd  mingcai_mingcai_tv_smart_tv_sl3000.prd  monalisa.mld  reprovision.bat  xiaomi_redmi_note_7_15.0.0_050d8f90_22586_l3.wvd
fuckdl/objects/: __init__.py  titles.py  tracks.py  vaults.py
fuckdl/parsers/: m3u8.py  mpd.py  mpd_vix.py
fuckdl/services/: BaseService.py  __init__.py  adn.py  amazon.py  appletvplus.py  arte.py  bbciplayer.py  britbox.py  canalplus.py  clarovideo.py  crave.py  crunchyroll.py  ctv.py  discoveryplus.py  disneyplus.py  dscpus.py  fandango.py  fawesome.py  fod.py  hbomax.py  hidive.py  hulu.py  hulujp.py  iqiyi.py  itunes.py  kocowa.py  m6.py  meliplay.py  mgmplus.py  molotov.py  moviesanywhere.py  mubi.py  my5.py  nfb.py  paramountplus.py  peacock.py  plex.py  pluto.py  rakutentv.py  skyshowtime.py  (+12 more)
fuckdl/utils/: __init__.py  click.py  io.py  lang.py  monalisa.py  monalisa_cdm.py
scripts/: AddKeysToKeyVault.py  MergeKeyStores.py
scripts/WVD/: JsonWVDtoStructWVD.py  MakeWVD.py
(+7 files in other folders)
